change btn class to menu-btn to avoid css spill

--- a/client/src/components/MenuButton/MenuButton.css
+++ b/client/src/components/MenuButton/MenuButton.css
@@ -1,4 +1,4 @@
-.btn {
+.menu-btn {
   background-color: rgba(252, 252, 252, 0.973);
   font-family: 'Dosis';
 }
